force-app/main/default/objects/Similarly_Treated_Ind__c/Similarly_Treated_Ind__c.object-meta.xml
<CustomObject>
    <label>Similarly Treated Ind.</label>
    <nameField>
        <label>Similarly Treated Ind. Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Similarly Treated Inds</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>