force-app/main/default/objects/Similarly_Treated_Ind__c/fields/EEO_Detail__c.field-meta.xml
<CustomField>
    <fullName>EEO_Detail__c</fullName>
    <label>EEO Detail</label>
    <referenceTo>EEO_Detail__c</referenceTo>
    <relationshipLabel>Similarly Treated Inds</relationshipLabel>
    <relationshipName>Similarly_Treated_Inds</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>