force-app/main/default/objects/Similarly_Treated_Ind__c/fields/Individual__c.field-meta.xml
<CustomField>
    <fullName>Individual__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Individual</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Similarly Treated Inds</relationshipLabel>
    <relationshipName>Similarly_Treated_Inds</relationshipName>
    <type>Lookup</type>
</CustomField>