force-app/main/default/objects/Similarly_Treated_Ind__c/fields/Individual_Number__c.field-meta.xml
<CustomField>
    <fullName>Individual_Number__c</fullName>
    <displayFormat>W-{000000}</displayFormat>
    <label>Individual Number</label>
    <type>AutoNumber</type>
</CustomField>